======= Change History ========

- Fixed: Screenshot file still sent even if deleted (issue 186).
- Fixed: Video division by zero (issue 189)

--- Ver. 1.4.1 ---

- New: Added an ability to preview OGG video files in Error Report Details dialog.
       To preview a file, select it in the list of files.

- New: Added an bility for end user to delete screenshots, registry keys and video file
       from crash report through context menu of Error Report Details dialog 
       (added CR_AS_ALLOW_DELETE flag for crAddScreenshot2() function,
        CR_AR_ALLOW_DELETE flag for crAddRegKey() function and CR_AV_ALLOW_DELETE
        flag for crAddVideo() function). (issue 183) 

- New: Added back the crExceptionFilter() function removed previously as deprecated. 
       It seems that some users require that function. (issue 175).

- New: Extended unit tests (added ExceptionHandlerTests) (issue 114)

- Fixed: Exception handling problems (issue 180)
- Fixed: Update italian language file (issue 174)
- Fixed again: HTTPS certificate problem (issue 151)
- Fixed: Custom property cleared by adding other property (issue 176)
- Fixed: Running crprober on windows 7 results in no stack trace output (issue 182)


--- Ver. 1.4.0 ---

- New: CrashRpt is now able to capture end user's desktop and record what happened 
       just before crash to an .ogg video file and include the file to crash report. 
       The recorded information may help the software vendor to better understand 
       what actions the end user performed before client application crashed and 
       reproduce the error (issue 122). 

- New: Added new crAddVideo() function to record the desktop state to a video file 
       and add the file to crash report.

- New: Added code of Theora video codec and OGG container (libtheora and libogg).

- New: New-style crash callback replacing the obsolete LPGETLOGFILE() callback.
       Added PFNCRASHCALLBACK() callback function prototype, CR_CRASH_CALLBACK_INFO